--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --aot --prod"
   },
   "private": true,
   "dependencies": {
@@ -19,11 +20,13 @@
     "@angular/platform-browser": "~8.0.0",
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
+    "express": "^4.17.1",
     "js-cookie": "^2.2.0",
     "ngx-emoj": "0.0.7",
     "ngx-malihu-scrollbar": "^8.0.0",
     "ngx-socket-io": "^2.1.1",
     "ngx-toastr": "^10.0.4",
+    "path": "^0.12.7",
     "punycode": "^2.1.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
@@ -49,5 +52,9 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
+  },
+  "engines": {
+    "node": "~12.4.0",
+    "npm": "~6.9.0"
   }
 }
